{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 143,
  "lineage": "fe15e005-cbf2-5be1-fbd0-58b0101ecb16",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-customer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08fe38f494322799e",
            "association_id": "eipassoc-0335a073c2a50c586",
            "domain": "vpc",
            "id": "eipalloc-08fe38f494322799e",
            "network_border_group": "ap-southeast-3",
            "network_interface": "eni-019d1565cdf48bf09",
            "private_dns": "ip-10-20-0-85.ap-southeast-3.compute.internal",
            "private_ip": "10.20.0.85",
            "public_dns": "ec2-16-78-203-228.ap-southeast-3.compute.amazonaws.com",
            "public_ip": "16.78.203.228",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-customer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:980921713930:internet-gateway/igw-05fe3d22ddc3d093f",
            "id": "igw-05fe3d22ddc3d093f",
            "owner_id": "980921713930",
            "tags": {
              "Name": "igw-customer"
            },
            "tags_all": {
              "Name": "igw-customer"
            },
            "vpc_id": "vpc-0ffa971779537e336"
          },
          "dependencies": [
            "aws_vpc.vpc-customer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-customer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08fe38f494322799e",
            "connectivity_type": "public",
            "id": "nat-0f4d6cddfba76f8e1",
            "network_interface_id": "eni-019d1565cdf48bf09",
            "private_ip": "10.20.0.85",
            "public_ip": "16.78.203.228",
            "subnet_id": "subnet-058d13d9cf59672b8",
            "tags": {
              "Name": "nat-customer"
            },
            "tags_all": {
              "Name": "nat-customer"
            }
          },
          "dependencies": [
            "aws_eip.eip-customer",
            "aws_internet_gateway.igw-customer",
            "aws_subnet.public-customer-1",
            "aws_vpc.vpc-customer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-private-customer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:980921713930:route-table/rtb-06839ba33c66908d7",
            "id": "rtb-06839ba33c66908d7",
            "owner_id": "980921713930",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0f4d6cddfba76f8e1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-private-customer"
            },
            "tags_all": {
              "Name": "rt-private-customer"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ffa971779537e336"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip-customer",
            "aws_internet_gateway.igw-customer",
            "aws_nat_gateway.nat-customer",
            "aws_subnet.public-customer-1",
            "aws_vpc.vpc-customer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-public-customer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:980921713930:route-table/rtb-058070dca726682c7",
            "id": "rtb-058070dca726682c7",
            "owner_id": "980921713930",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05fe3d22ddc3d093f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-public-customer"
            },
            "tags_all": {
              "Name": "rt-public-customer"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ffa971779537e336"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-customer",
            "aws_vpc.vpc-customer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-assoc-priv-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0645a4923f21b402e",
            "route_table_id": "rtb-06839ba33c66908d7",
            "subnet_id": "subnet-0c28edc2a5dd00dbb"
          },
          "dependencies": [
            "aws_eip.eip-customer",
            "aws_internet_gateway.igw-customer",
            "aws_nat_gateway.nat-customer",
            "aws_route_table.rt-private-customer",
            "aws_subnet.private-customer-1",
            "aws_subnet.public-customer-1",
            "aws_vpc.vpc-customer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-assoc-priv-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d2fbbe23104ab85",
            "route_table_id": "rtb-06839ba33c66908d7",
            "subnet_id": "subnet-06b9de53c701a81e3"
          },
          "dependencies": [
            "aws_eip.eip-customer",
            "aws_internet_gateway.igw-customer",
            "aws_nat_gateway.nat-customer",
            "aws_route_table.rt-private-customer",
            "aws_subnet.private-customer-2",
            "aws_subnet.public-customer-1",
            "aws_vpc.vpc-customer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-assoc-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0578b966a9d044a1d",
            "route_table_id": "rtb-058070dca726682c7",
            "subnet_id": "subnet-058d13d9cf59672b8"
          },
          "dependencies": [
            "aws_internet_gateway.igw-customer",
            "aws_route_table.rt-public-customer",
            "aws_subnet.public-customer-1",
            "aws_vpc.vpc-customer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-base",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:980921713930:security-group/sg-0dd416037f494135e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dd416037f494135e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20250703065359111800000001",
            "name_prefix": "terraform-",
            "owner_id": "980921713930",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-base"
            },
            "tags_all": {
              "Name": "sg-base"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ffa971779537e336"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-customer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress-rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3394012528",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0dd416037f494135e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-base",
            "aws_vpc.vpc-customer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress-rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow SSH",
            "from_port": 22,
            "id": "sgrule-3758651174",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0dd416037f494135e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-base",
            "aws_vpc.vpc-customer"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTP",
            "from_port": 80,
            "id": "sgrule-1451371155",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0dd416037f494135e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-base",
            "aws_vpc.vpc-customer"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTPS",
            "from_port": 443,
            "id": "sgrule-670311551",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0dd416037f494135e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-base",
            "aws_vpc.vpc-customer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-customer-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:980921713930:subnet/subnet-0c28edc2a5dd00dbb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-3b",
            "availability_zone_id": "apse3-az2",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c28edc2a5dd00dbb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "980921713930",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-customer-1"
            },
            "tags_all": {
              "Name": "private-customer-1"
            },
            "vpc_id": "vpc-0ffa971779537e336"
          },
          "dependencies": [
            "aws_vpc.vpc-customer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-customer-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:980921713930:subnet/subnet-06b9de53c701a81e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-3c",
            "availability_zone_id": "apse3-az3",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b9de53c701a81e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "980921713930",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-customer-2"
            },
            "tags_all": {
              "Name": "private-customer-2"
            },
            "vpc_id": "vpc-0ffa971779537e336"
          },
          "dependencies": [
            "aws_vpc.vpc-customer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-customer-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:980921713930:subnet/subnet-058d13d9cf59672b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-3a",
            "availability_zone_id": "apse3-az1",
            "cidr_block": "10.20.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058d13d9cf59672b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "980921713930",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-customer-1"
            },
            "tags_all": {
              "Name": "public-customer-1"
            },
            "vpc_id": "vpc-0ffa971779537e336"
          },
          "dependencies": [
            "aws_vpc.vpc-customer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-customer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:980921713930:vpc/vpc-0ffa971779537e336",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0e841d4a699497e2f",
            "default_route_table_id": "rtb-0363fb0a9ce09eb4f",
            "default_security_group_id": "sg-0bd7f10c6b967764f",
            "dhcp_options_id": "dopt-09bf193aba5bd3eb3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ffa971779537e336",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0363fb0a9ce09eb4f",
            "owner_id": "980921713930",
            "tags": {
              "Name": "vpc-customer"
            },
            "tags_all": {
              "Name": "vpc-customer"
            }
          }
        }
      ]
    }
  ]
}